--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
                 <div class="oferta shine-effect">
                     <span class="etiqueta etiqueta-economico">Más económico</span>
                     <h3><i class="fas fa-star"></i> Recarga Básica</h3>
-                    <p class="descripcion-oferta"><strong>2GB + 15 Min + 20 SMS</strong> - Ideal para poco uso</p>
+                    <p class="descripcion-oferta"><strong>120CUP</strong> de saldo móvil</p>
                     
                     <div class="precio-container">
-                        <span class="precio-tachado">500 CUP</span>
-                        <div class="precio">400</div>
+                        <span class="precio-tachado">600 CUP</span>
+                        <div class="precio">500</div>
                     </div>
                     
                     <div class="mensaje-precio">Precio directo y económico</div>
                     <ul class="beneficios">
-                        <li><strong>120 CUP</strong> de saldo móvil</li>
+                        <li><strong>0%</strong> de ahorro</li>
                         <li>Recarga instantánea en segundos</li>
                         <li>Atención rápida y personalizada</li>
                     </ul>
