Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <li>Recarga instantánea en segundos</li>
                         <li>Atención rápida y personalizada</li>
                     </ul>
-                    <button class="whatsapp-btn" onclick="comprarOferta('Recarga Básica: 2GB + 15 Min + 20 SMS', '400 CUP', 'RB-400')">
+                    <button class="whatsapp-btn" onclick="comprarOferta('Recarga Básica: 120CUP saldo móvil', '500 CUP', 'RB-500')">
                         <i class="fab fa-whatsapp"></i> Comprar por WhatsApp
                     </button>
                 </div>
