Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <li>Recarga instantánea en segundos</li>
                         <li>Atención rápida y personalizada</li>
                     </ul>
-                    <button class="whatsapp-btn" onclick="comprarOferta('Recarga Básica: 120CUP saldo móvil', '500 CUP', 'RB-500')">
+                    <button class="whatsapp-btn" onclick="comprarOferta('Recarga Básica: 120 CUP saldo móvil', '500 CUP', 'RB-500')">
                         <i class="fab fa-whatsapp"></i> Comprar por WhatsApp
                     </button>
                 </div>
@@ -70,20 +70,20 @@
                 <!-- OFERTA 2: Recarga Estándar -->
                 <div class="oferta shine-effect">
                     <h3><i class="fas fa-crown"></i> Recarga Estándar</h3>
-                    <p class="descripcion-oferta"><strong>4GB + 35 Min + 40 SMS</strong> - Ideal para uso semanal</p>
+                    <p class="descripcion-oferta"><strong>240 CUP</strong> de saldo móvil</p>
                     
                     <div class="precio-container">
-                        <span class="precio-tachado">900 CUP</span>
-                        <div class="precio">800</div>
+                        <span class="precio-tachado">1000 CUP</span>
+                        <div class="precio">900</div>
                     </div>
                     
                     <div class="mensaje-precio">Sin variaciones - Precio justo</div>
                     <ul class="beneficios">
-                        <li><strong>240 CUP</strong> de saldo móvil</li>
+                        <li><strong>12.8%</strong> de ahorro</li>
                         <li>Recarga instantánea en segundos</li>
                         <li>Atención rápida y personalizada</li>
                     </ul>
-                    <button class="whatsapp-btn" onclick="comprarOferta('Recarga Estándar: 4GB + 35 Min + 40 SMS', '800 CUP', 'RE-800')">
+                    <button class="whatsapp-btn" onclick="comprarOferta('Recarga Estándar: 240 CUP de saldo móvil', '900 CUP', 'RE-900')">
                         <i class="fab fa-whatsapp"></i> Comprar por WhatsApp
                     </button>
                 </div>
